2005-05-23  David Harrison  <harrison@apple.com>

        Reviewed by Darin.

		Prevent crash when going from no selection to selection with mispelling checks enabled.
		
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::markMisspellings):
        Repair check for null searchRange.  Was inadvertently broken in recent checkin.

2005-05-23  John Sullivan  <sullivan@apple.com>

        Reviewed by Dave Hyatt.
        
        - fixed <rdar://problem/4123592> Can't resize textareas that have a width specified by a style

        * kwq/KWQTextArea.mm:
        (-[KWQTextArea getNumColumns:andNumRows:forSize:]):
        removed this method, which I had added earlier to set cols and rows correctly
        (-[KWQTextAreaTextView _trackResizeFromMouseDown:]):
        set width and height instead of cols and rows; handle the intrinsic margin that sometimes appears
        on form elements

2005-05-22  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        fix for <rdar://problem/4127101> REGRESSION(412-TOT) crash when creating Option element

        * khtml/ecma/kjs_html.cpp: (KJS::OptionConstructorImp::construct):
        Changed ElementImpl pointer to a SharedPtr because it was getting destroyed before we were done with it.  

2005-05-20  John Sullivan  <sullivan@apple.com>

        Reviewed by Chris.
        
        - fixed <rdar://problem/4126160> Crash sending mouse-exited event after reloading 
        page with resizable textarea

        * kwq/KWQTextArea.mm:
        (-[KWQTextAreaTextView resetCursorRects]):
        This was some side effect of tracking rect code used for resizable textareas. I discovered
        that I didn't need the tracking rect code at all (at least to achieve the level of only-somewhat-working
        cursor behavior that I already had). Removing it caused the bug to vanish.

2005-05-19  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.
        