@@ -68,6 +68,12 @@
 #include "css/css_stylesheetimpl.h"
 #include "misc/htmltags.h"
 
+// Must include <cmath> instead of <math.h> because of a bug in the
+// gcc 3.3 library version of <math.h> where if you include both
+// <cmath> and <math.h> the macros necessary for functions like
+// isnan are not defined.
+#include <cmath>
+
 using DOM::DocumentImpl;
 using DOM::DOMString;
 using DOM::ElementImpl;
@@ -78,6 +84,8 @@ using DOM::NodeImpl;
 using DOM::Position;
 
 using khtml::TypingCommand;
+
+using std::isnan;
 
 namespace KJS {
 
@@ -1482,7 +1490,7 @@ Value WindowFunc::tryCall(ExecState *exec, Object &thisObj, const List &args)
             if (key == "left" || key == "screenx") {
               bool ok;
               double d = val.toDouble(&ok);
-              if (d != 0 || ok) {
+              if ((d != 0 || ok) && !isnan(d)) {
                 d += screen.x();
                 if (d < screen.x() || d > screen.right())
 		  d = screen.x(); // only safe choice until size is determined
@@ -1494,7 +1502,7 @@ Value WindowFunc::tryCall(ExecState *exec, Object &thisObj, const List &args)
             } else if (key == "top" || key == "screeny") {
               bool ok;
               double d = val.toDouble(&ok);
-              if (d != 0 || ok) {
+              if ((d != 0 || ok) && !isnan(d)) {
                 d += screen.y();
                 if (d < screen.y() || d > screen.bottom())
 		  d = screen.y(); // only safe choice until size is determined
@@ -1506,7 +1514,7 @@ Value WindowFunc::tryCall(ExecState *exec, Object &thisObj, const List &args)
             } else if (key == "height") {
               bool ok;
               double d = val.toDouble(&ok);
-              if (d != 0 || ok) {
+              if ((d != 0 || ok) && !isnan(d)) {
 #if !APPLE_CHANGES
                 d += 2*qApp->style().pixelMetric( QStyle::PM_DefaultFrameWidth ) + 2;
 #endif
@@ -1522,7 +1530,7 @@ Value WindowFunc::tryCall(ExecState *exec, Object &thisObj, const List &args)
             } else if (key == "width") {
               bool ok;
               double d = val.toDouble(&ok);
-              if (d != 0 || ok) {
+              if ((d != 0 || ok) && !isnan(d)) {
 #if !APPLE_CHANGES
                 d += 2*qApp->style().pixelMetric( QStyle::PM_DefaultFrameWidth ) + 2;
 #endif
